# dux

./: .gitignore  CHANGELOG.md  LICENSE-APACHE  README.md  RELEASING.md  cliff.toml  mix.exs
.github/workflows/: ci.yml  release.yml
bench/: compare_backend.exs  core_bench.exs  graph_bench.exs
bench/results/: adbc-migration.md  baseline_pre_hardening.txt  history.csv  post_hardening.txt
guides/: cheatsheet.cheatmd  data-io.livemd  distributed-queries.livemd  distributed-queries.md  distributed.md  flame-clusters.livemd  getting-started.livemd  getting-started.md  graph-analytics.livemd  graph-analytics.md  joins-and-reshape.livemd  transformations.livemd
lib/: dux.ex
lib/dux/: application.ex  backend.ex  connection.ex  datasets.ex  flame.ex  flame_trackable.ex  fts.ex  graph.ex  inspect.ex  json.ex  lattice.ex  native.ex  nx.ex  q.ex  query.ex  query_builder.ex  remote.ex  sql.ex  table_reader.ex  table_ref.ex  telemetry.ex
native/dux/: Cargo.toml
native/dux/src/: database.rs  dataframe.rs  error.rs  gc_sentinel.rs  lib.rs
priv/datasets/: flights.csv  karate_club.csv
test/: dux_test.exs
test/dux/: adbc_edge_cases_test.exs  adbc_peer_test.exs  asof_join_test.exs  backend_test.exs  betweenness_centrality_test.exs  broadcast_test.exs  connection_test.exs  coordinator_test.exs  dataset_e2e_test.exs  distributed_correctness_peer_test.exs  distributed_correctness_test.exs  distributed_graph_test.exs  distributed_insert_peer_test.exs  distributed_join_routing_test.exs  distributed_parquet_peer_test.exs  distributed_parquet_test.exs  distributed_test.exs  (+20 more)
(+18 files in other folders)
