[package]
name = "dux"
version = "0.1.0"
edition = "2021"

[lib]
name = "dux"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_16"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]

[dependencies]
rustler = "0.37"
duckdb = { version = "1.2", features = ["bundled", "vtab-arrow", "appender-arrow"] }
arrow = { version = "57", default-features = false, features = ["ipc"] }
thiserror = "2"
chrono = "0.4"
